Improved playlist requesting for DisplayLayer, now waiting more when IO errors happens to avoid spamming HTTP requests when a source is not available.