@@ -2,7 +2,6 @@ package fr.theorozier.webstreamer.display.source;
 
 import fr.theorozier.webstreamer.playlist.PlaylistQuality;
 import net.minecraft.nbt.NbtCompound;
-import net.minecraft.nbt.NbtElement;
 import net.minecraft.nbt.NbtString;
 
 import java.net.*;
@@ -45,8 +44,8 @@ public class TwitchDisplaySource implements DisplaySource {
     }
     
     @Override
-    public URL getUrl() {
-        return this.quality == null ? null : this.quality.url();
+    public URI getUri() {
+        return this.quality == null ? null : this.quality.uri();
     }
     
     @Override
@@ -54,7 +53,7 @@ public class TwitchDisplaySource implements DisplaySource {
         if (this.channel != null && this.quality != null) {
             nbt.putString("channel", this.channel);
             nbt.putString("quality", this.quality.name());
-            nbt.putString("url", this.quality.url().toString());
+            nbt.putString("url", this.quality.uri().toString());
         }
     }
     
@@ -66,10 +65,10 @@ public class TwitchDisplaySource implements DisplaySource {
             nbt.get("url") instanceof NbtString urlRaw
         ) {
             try {
-                URL url = new URL(urlRaw.asString());
+                URI uri = URI.create(urlRaw.asString());
                 this.channel = channel.asString();
-                this.quality = new PlaylistQuality(quality.asString(), url);
-            } catch (MalformedURLException e) {
+                this.quality = new PlaylistQuality(quality.asString(), uri);
+            } catch (IllegalArgumentException e) {
                 e.printStackTrace();
             }
         }
